--- a/mdrakibul/css_rakib/patientAppoinmentFrom.css
+++ b/mdrakibul/css_rakib/patientAppoinmentFrom.css
@@ -20,6 +20,7 @@ body {
 h1 {
     text-align: center;
     color: #333;
+    margin-bottom: 20px;
 }
 
 form {
@@ -65,6 +66,7 @@ button {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
+    margin-top: 10px;
 }
 
 button:hover {
