--- a/mdrakibul/cssrakib/patientAppoinmentFrom.css
+++ b/mdrakibul/cssrakib/patientAppoinmentFrom.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    background-color: #1a633f;;
+    background-color: #1a633f;
     color: #fff;
     padding: 10px 0;
     width: 100%;
@@ -87,7 +87,7 @@ form select {
 form button {
     width: 100%;
     padding: 10px;
-    background-color: #1a633f;;
+    background-color: #1a633f;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -97,6 +97,68 @@ form button {
 
 form button:hover {
     background-color: #002244;
+}
+
+/* Footer Styles */
+footer {
+    background-color: #1a633f;
+    color: #fff;
+    padding: 20px 0;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.footer-top {
+    padding: 20px 0;
+    background-color: #003366;
+}
+
+.footer-top .container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.footer-top .container div {
+    flex: 1;
+    margin: 10px;
+}
+
+.footer-top h3 {
+    margin-bottom: 10px;
+    font-size: 18px;
+}
+
+.footer-top p,
+.footer-top ul,
+.footer-top ul li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.footer-top ul {
+    padding-left: 0;
+}
+
+.footer-top ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.footer-top ul li a:hover {
+    text-decoration: underline;
+}
+
+.footer-bottom {
+    background-color: #002244;
+    padding: 10px 0;
+    text-align: center;
+}
+
+.footer-bottom p {
+    margin: 0;
+    color: #fff;
 }
 
 /* Responsive Styles */
@@ -115,4 +177,16 @@ form button:hover {
         width: 100%;
         padding: 10px;
     }
+
+    .footer-top .container {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footer-top .container div {
+        margin: 10px 0;
+    }
 }
+
+
