Commited By @ODHSAGOR

--- a/css/doctorInterpage.css
+++ b/css/doctorInterpage.css
@@ -518,7 +518,7 @@ a:focus {
   background-color: #145a30;
 }
 
-/* Doctor Image Styles */
+
 .doctor-image {
   max-width: 100%;
   border-radius: 8px;
@@ -528,9 +528,7 @@ a:focus {
 
 
 
-/*=================================================================
-  Footer
-==================================================================*/
+/*============= Footer =============*/
 
 
 .footer {
