Commited By @ODHSAGOR

--- a/Sagor/cssSagor/patientAppoinmentFrom.css
+++ b/Sagor/cssSagor/patientAppoinmentFrom.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-    background-color: #1a633f;
+    background-color: #007bff;
     color: #fff;
     padding: 10px 0;
     width: 100%;
